--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <title>My HTML Page</title>
     <style>
+      body{
+        background-color:darkslategray;
+        color:white;
+      }
       h1{
-        color: #0000ff;
         size: 3rem;
       }
     </style>
