--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
       body{
         background-color:darkslategray;
         color:white;
+        font-family:Arial, sans-serif;
       }
       h1{
-        size: 3rem;
+        size: 5rem;
       }
     </style>
   </head>
