--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>My HTML Page</title>
     <style>
-      body{
-        background-color:darkslategray;
+      html{
+        background-color:darkslategray;        
         color:white;
         font-family:Arial, sans-serif;
       }
